--- a/package.json
+++ b/package.json
@@ -1,7 +1,32 @@
 {
   "name": "app",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.12.4",
+    "composable-middleware": "^0.3.0",
+    "compression": "^1.4.4",
+    "connect-mongo": "^0.8.1",
+    "cookie-parser": "^1.3.5",
+    "errorhandler": "^1.3.6",
+    "express": "^4.12.4",
+    "express-jwt": "^3.0.1",
+    "express-session": "^1.11.2",
+    "jade": "^1.9.2",
+    "jsonwebtoken": "^5.0.1",
+    "lodash": "^3.9.1",
+    "method-override": "^2.3.3",
+    "mongoose": "^4.0.3",
+    "morgan": "^1.5.3",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
+    "serve-favicon": "^2.2.1",
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5",
+    "socketio-jwt": "^4.0.1"
+  },
   "scripts": {
     "test": "gulp test"
   },
@@ -10,6 +35,7 @@
     "browser-sync-spa": "~1.0.2",
     "chalk": "~0.5.1",
     "concat-stream": "~1.4.7",
+    "connect-livereload": "^0.5.3",
     "del": "~1.1.1",
     "gulp": "~3.8.10",
     "gulp-angular-filesort": "~1.0.4",
