--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "concat-stream": "~1.4.7",
     "connect-livereload": "^0.5.3",
     "del": "~1.1.1",
+    "freeport": "^1.0.5",
     "gulp": "~3.8.10",
     "gulp-angular-filesort": "~1.0.4",
     "gulp-angular-templatecache": "~1.5.0",
@@ -53,6 +54,7 @@
     "gulp-load-plugins": "~0.8.0",
     "gulp-minify-html": "~0.1.7",
     "gulp-ng-annotate": "~0.5.2",
+    "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-print": "^1.1.0",
     "gulp-protractor": "~0.0.12",
