--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "root-path": "^0.2.0",
     "serve-favicon": "^2.2.1",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
